<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TaskTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="textbox">TextBox</string>
    <string name="app_title">Task Tracker</string>
    <string name="search_button_label">Search</string>
    <string name="login_main_button_label">Login</string>
    <string name="login_main_greeting_label">Welcome to Task Tracker</string>
    <string name="login_reset_title">Reset Password</string>
    <string name="login_main_username_field_label">Username</string>
    <string name="login_main_password_field_label">Password</string>
    <string name="login_reset_security_field_label">Security Answer</string>
    <string name="login_reset_newPass_field_label">New Password</string>
    <string name="login_reset_newPassConfirm_field_label">Confirm Password</string>
    <string name="login_reset_button_label">Submit</string>
    <string name="search_by_job_label">Search by job</string>
    <string name="admin_main_title">Welcome, Admin.</string>
    <string name="admin_employee_list_label">Employees</string>
    <string name="admin_add_employee_label">Add Employee</string>
    <string name="admin_remove_employee_label">Remove Employee</string>
    <string name="login_info">Username: *insert Password: *insert</string>
    <string name="user_main_title">Welcome, User</string>
    <string name="admin_new_title_label">New Work Order</string>
    <string name="admin_new_info_button_label">Info</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
