<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment"
    android:orientation="vertical"
    >

    <TextView
        android:id="@id/title_string"
        android:text="@string/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Space
        android:id="@+id/login_reset_spacing_1"
        android:layout_width="1dp"
        android:layout_height="50dp"/>

    <TextView
        android:id="@+id/login_reset_title"
        android:text="@string/login_reset_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/login_reset_spacing_1" />

    <TextView
        android:id="@+id/login_reset_securityQuestion"
        android:text=""
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/login_reset_title" />

    <Space
        android:id="@+id/login_reset_spacing_2"
        android:layout_width="1dp"
        android:layout_height="50dp"
        android:layout_below="@id/login_reset_spacing_1" />


    <View
        android:id="@+id/title_divider"
        android:background="#1900ff"
        android:layout_width = "fill_parent"
        android:layout_height="2dp"
        android:layout_centerVertical ="true"
        android:layout_below="@id/title_string" />


    <EditText
        android:id="@+id/login_reset_security_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_reset_security_field_label"
        android:inputType="text"
        android:layout_below="@id/login_reset_spacing_2" />

    <EditText
        android:id="@+id/login_reset_newPass_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_reset_newPass_field_label"
        android:inputType="text"
        android:layout_below="@id/login_reset_security_field" />

    <EditText
        android:id="@+id/login_reset_newPassConfirm_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_reset_newPassConfirm_field_label"
        android:inputType="text"
        android:layout_below="@id/login_reset_newPass_field" />

    <Space
        android:id="@+id/login_reset_spacing_3"
        android:layout_width="1dp"
        android:layout_height="50dp"
        android:layout_below="@id/login_reset_newPassConfirm_field" />

    <Button
        android:id="@+id/login_button"
        android:layout_height="50dp"
        android:text="@string/login_reset_button_label"
        android:layout_width="200dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_reset_spacing_3" />

</RelativeLayout>
