<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Activity_LoginMain"

    >

    <TextView
        android:id="@+id/login_main_title"
        android:text="Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/title_divider"
        android:background="#1900ff"
        android:layout_width = "fill_parent"
        android:layout_height="2dp"
        android:layout_centerVertical ="true"
        android:layout_below="@id/login_main_title" />

    <Space
        android:id="@+id/login_spacing_1"
        android:layout_width="1dp"
        android:layout_height="50dp"/>

    <TextView
        android:id="@+id/login_main_greeting"
        android:text="@string/login_main_greeting_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/login_spacing_1" />

    <Space
        android:id="@+id/login_spacing_2"
        android:layout_width="1dp"
        android:layout_height="50dp"
        android:layout_below="@id/login_spacing_1" />


    <EditText
        android:id="@+id/login_main_username_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_main_username_field_label"
        android:inputType="text"
        android:layout_below="@id/login_spacing_2" />

    <EditText
        android:id="@+id/login_main_password_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_main_password_field_label"
        android:inputType="textPassword"
        android:layout_below="@id/login_main_username_field" />

    <Space
        android:id="@+id/login_spacing_3"
        android:layout_width="1dp"
        android:layout_height="50dp"
        android:layout_below="@id/login_main_password_field" />

    <Button
        android:id="@+id/login_button"
        android:layout_height="50dp"
        android:text="@string/login_main_button_label"
        android:layout_width="200dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_spacing_3"
        android:onClick="LogIn"/>


</RelativeLayout>
