<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/title_string"
        android:text="My Work Orders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Space
        android:id="@+id/user_spacing_1"
        android:layout_width="1dp"
        android:layout_height="50dp"/>

    <TextView
        android:id="@+id/user_main_title"
        android:text="@string/user_main_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/user_spacing_1" />

    <Space
        android:id="@+id/user_spacing_2"
        android:layout_width="1dp"
        android:layout_height="50dp"
        android:layout_below="@id/user_main_title" />

    <View
        android:id="@+id/title_divider"
        android:background="#1900ff"
        android:layout_width = "fill_parent"
        android:layout_height="2dp"
        android:layout_centerVertical ="true"
        android:layout_below="@id/title_string" />

    <Space
        android:id="@+id/user_spacing_3"
        android:layout_width="1dp"
        android:layout_height="50dp"
        android:layout_below="@id/user_main_title" />


    <EditText
        android:id="@+id/user_search_job_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_by_job_label"
        android:inputType="text"
        android:layout_below="@id/user_spacing_3" />

    <Button
        android:id="@+id/user_search_button"
        android:layout_height="50dp"
        android:text="@string/search_button_label"
        android:layout_width="200dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/user_search_job_field" />

    <Space
        android:id="@+id/user_spacing_4"
        android:layout_width="1dp"
        android:layout_height="35dp"
        android:layout_below="@id/user_search_button" />

    <TextView
        android:id="@+id/user_employee_list_label"
        android:text="My Jobs"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/user_spacing_4" />

    <ListView
        android:id="@+id/user_employee_list_view"
        android:layout_height="200dp"
        android:layout_width="250dp"
        android:layout_below="@id/user_employee_list_label"/>


</RelativeLayout>
